; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_13402.c_patchcode.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_13402.c_patchcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @patchcode(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @ntohs(i32 %15)
  %17 = shl i32 %16, 16
  %18 = add nsw i32 %17, 2
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @find_safe_offset(i32 %19)
  store i32 %20, i32* %10, align 4
  %21 = load i8*, i8** %7, align 8
  %22 = call i32 @inet_addr(i8* %21)
  store i32 %22, i32* %11, align 4
  %23 = load i32, i32* %11, align 4
  %24 = call i32 @find_safe_offset(i32 %23)
  store i32 %24, i32* %12, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @ntohs(i32 %25)
  %27 = shl i32 %26, 16
  %28 = add nsw i32 %27, 2
  store i32 %28, i32* %13, align 4
  %29 = load i32, i32* %13, align 4
  %30 = call i32 @find_safe_offset(i32 %29)
  store i32 %30, i32* %14, align 4
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* %10, align 4
  %33 = sub nsw i32 %31, %32
  %34 = load i8*, i8** %5, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 134
  %36 = bitcast i8* %35 to i32*
  store i32 %33, i32* %36, align 4
  %37 = load i32, i32* %10, align 4
  %38 = load i8*, i8** %5, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 141
  %40 = bitcast i8* %39 to i32*
  store i32 %37, i32* %40, align 4
  %41 = load i32, i32* %11, align 4
  %42 = load i32, i32* %12, align 4
  %43 = sub nsw i32 %41, %42
  %44 = load i8*, i8** %5, align 8
  %45 = getelementptr inbounds i8, i8* %44, i64 205
  %46 = bitcast i8* %45 to i32*
  store i32 %43, i32* %46, align 4
  %47 = load i32, i32* %12, align 4
  %48 = load i8*, i8** %5, align 8
  %49 = getelementptr inbounds i8, i8* %48, i64 212
  %50 = bitcast i8* %49 to i32*
  store i32 %47, i32* %50, align 4
  %51 = load i32, i32* %13, align 4
  %52 = load i32, i32* %14, align 4
  %53 = sub nsw i32 %51, %52
  %54 = load i8*, i8** %5, align 8
  %55 = getelementptr inbounds i8, i8* %54, i64 217
  %56 = bitcast i8* %55 to i32*
  store i32 %53, i32* %56, align 4
  %57 = load i32, i32* %14, align 4
  %58 = load i8*, i8** %5, align 8
  %59 = getelementptr inbounds i8, i8* %58, i64 224
  %60 = bitcast i8* %59 to i32*
  store i32 %57, i32* %60, align 4
  ret void
}

declare dso_local i32 @ntohs(i32) #1

declare dso_local i32 @find_safe_offset(i32) #1

declare dso_local i32 @inet_addr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
